[package]
authors = ["quentin chavigny turbe <quentin.chavignyturbe@st.com>"]
edition = "2021"
readme = "README.md"
name = "simple_application_i2c"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
vl53l4ed = {path = "../../"}

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f401"]

[[bin]]
name = "simple_application_i2c"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
